@@ -6,15 +6,16 @@
 # Change 1..1 below to 1..last_test_to_print .
 # (It may become useful if the test is moved to ./t subdirectory.)
 
-BEGIN { $| = 1; print "1..10\n"; }
+BEGIN { $| = 1; print "1..9\n"; }
 END {print "not ok 1\n" unless $loaded;}
 use Fcntl ;
 use MLDBM qw(DB_File) ;
 use ExtUtils::testlib;
 use Puppet::Body ;
+use Puppet::Storage;
 $loaded = 1;
 my $idx = 1;
-print "ok ",$idx++,"\n";
+print "ok ",$idx++,"\n";#1
 my $trace = shift || 0;
 
 ######################### End of black magic.
@@ -27,52 +28,54 @@ use strict ;
 my $file = 'test.db';
 my %dbhash;
 tie %dbhash,  'MLDBM',    $file , O_CREAT|O_RDWR, 0640 or die $! ;
-print "ok ",$idx++,"\n";
+print "ok ",$idx++,"\n";#2
 
-my $tv = $trace ? 'debug' : undef ;
-my $test = new Puppet::Body (name => 'test',
-                             dbHash => \%dbhash,
-                             keyRoot => 'key root',
-                             cloth => {}, # dummy object
-                             trace => $tv
-                            );
-print "ok ",$idx++,"\n";
+my $test2 = new Puppet::Storage 
+  (
+   name => 'test2',
+   dbHash => \%dbhash,
+   keyRoot => 'key root'
+  );
 
-$test->printEvent("Dummy event print");
-print "ok ",$idx++,"\n";
+print "ok ",$idx++,"\n";#3
 
-$test->printDebug("Dummy debug print");
-print "ok ",$idx++,"\n";
-
-$test->storeDbInfo(toto => 'toto val', 
+$test2->storeDbInfo(toto => 'toto val', 
                  'titi' => 'titi val',
                    dummy => 'null') ;
-print "ok ",$idx++,"\n";
+print "ok ",$idx++,"\n";#6
 
-print "not " unless $test->getDbInfo('toto') eq "toto val" ;
-print "ok ",$idx++,"\n";
+print "not " unless $test2->getDbInfo('toto') eq "toto val" ;
+print "ok ",$idx++,"\n";#7
 
-my $h = $test->getDbInfo('toto','titi','dummy');
+my $h = $test2->getDbInfo('toto','titi','dummy');
 print "not " unless ($h->{toto} eq 'toto val'
                      and $h->{titi} eq 'titi val'
                      and $h->{dummy} eq 'null') ;
 
-print "ok ",$idx++,"\n";
+print "ok ",$idx++,"\n";#8
 
-$test->deleteDbInfo('dummy');
-print "ok ",$idx++,"\n";
+# test  to do
+$h = $test2->dumpDbInfo();
+print "not " unless ($h->{toto} eq 'toto val'
+                     and $h->{titi} eq 'titi val'
+                     and $h->{dummy} eq 'null') ;
+print "ok ",$idx++,"\n";#9
+
+
+$test2->deleteDbInfo('dummy');
+print "ok ",$idx++,"\n";#10
 
 untie %dbhash ;
 
 my $res = `db_dump -p $file`;
 
 print "not " unless 
-  index ($res ,'key root;test# titi
+  index ($res ,'key root;test2# titi
 titi val
-key root;test# toto
+key root;test2# toto
 toto val
 ') != -1 ;
 
-print "ok ",$idx++,"\n";
+print "ok ",$idx++,"\n";#11
 
 #unlink $file;
