@@ -1,4 +1,9 @@
+1999-05-27  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
+
+	* moved storage handling in Puppet::Storage
+
 1999-01-06  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 v1.011
 	* Body.pm: first version after Puppet::Any split
+
 
